added aplaca env

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 CLIENT_ID="5f03c42500f5020011f9c501"
 SECRET_KEY="8a79a0c07731fbcdfc087e9aacded2"
 PUBLIC_KEY="85dca55a8b609ed26a37ecc0a10c6b"
+ALPACA_API_KEY="PKA1R5IXJFTCED02SFCF"
+ALPACA_SECRET_KEY="AoUoyaai2kXiND1h2/R9I0kL1w/QhhK8B8Wa6YPK"
